test/errmsg/negative-size-array.c.expect
---- stdout ----
---- stderr ----
errmsg/negative-size-array.c:4:5: error: Array size must be nonnegative (it is -3).
---- exit status ----
Exit 2
